Add updater logs